Fix whitespace rendering (support 2262)

--- a/public/files/css/view.less
+++ b/public/files/css/view.less
@@ -926,10 +926,6 @@ a.speech-link:hover {
             font-weight: normal;
         }
     }
-
-    td.kw > strong:not(:first-child) {
-        padding-left: 0.2em;
-    }
 }
 
 .jump-to {
